Add page publications

--- a/src/views/pages/main.pug
+++ b/src/views/pages/main.pug
@@ -80,7 +80,7 @@ block content
                         |‑30%
                   h4.main-page__discont-title 
                     |Cкидка 30% на весь ассортимент фрез OSAWA серии HF871
-                  p.main-page__text 
+                  p.main-page__discont-text 
                     |Предлагаем попробовать высокопроизводительные фрезы HF по цене фрез G2. Срок акции с 10.09.2021 по 31.12.2021.
                 .main-page__icon 
                   +big-arrow-svg.main-page__svg
