--- a/src/assets/styles/pages/main-page.scss
+++ b/src/assets/styles/pages/main-page.scss
@@ -174,6 +174,7 @@
 
     display: block;
     width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+    min-height: 218px;
 
     background: $color-white;
     border-radius: 4px;
