--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -5,10 +5,16 @@ mixin footer
         .footer__inner 
           .footer__top-row 
             .footer__top-col 
-              .footer__title
-                |Каталог продукции
-              .footer__title
-                |Интернет-магазин
+              .footer__top-item
+                .footer__title.footer__title--sm
+                  |Каталог продукции
+                .footer__top-text 
+                  |Станки с ЧПУ, ленточнопильные станки, шлифовальные станки, гидравлические прессы и прочее оборудование
+              .footer__top-item
+                .footer__title.footer__title--sm
+                  |Интернет-магазин
+                .footer__top-text 
+                  |Режущий инструмент, вспомогательный инструмент, аксессуары для инструмента и приспособления
             .footer__top-col 
               .footer__title 
                 |Услуги
