--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -11,20 +11,40 @@
   
   &__inner {
     padding: 20px 20px 0;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 8px 16px;
+    }
 
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      justify-content: space-between;
+      align-items: center;
+    }
 
     border-bottom: 1px solid $color-light-gray;
   }
 
   &__logo {
     margin-right: 60px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-right: 0;
+    }
     display: flex;
     justify-content: center;
   }
 
+  &__svg {
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 73px;
+      height: 30px;
+    }
+  }
+
   &__body {
     width: 100%;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: none;
+    }
   }
 
   &__top {
@@ -148,6 +168,12 @@
     align-items: center;
     justify-content: center;
   }
+  &__search-svg {
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 24px;
+      height: 25px;
+    }
+  }
   &__search-text {
     @include fsl(14px, 140%);
     color: $color-gray;
@@ -167,8 +193,17 @@
     display: flex;
     align-items: center;
   }
+  &__cart-svg {
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 32px;
+      height: 30px;
+    }
+  }
   &__cart-count {
-    $size: 16px;
+    --size: 16px;
+    @media (max-width: ($breakpoint - 1px)) {
+      --size: 13px;
+    }
 
     position: absolute;
     z-index: 1;
@@ -176,8 +211,8 @@
     left: 50%;
     transform: translateX(-50%);
 
-    width: $size;
-    height: $size;
+    width: var(--size);
+    height: var(--size);
 
     display: flex;
     align-items: center;
@@ -187,6 +222,9 @@
     border-radius: 50%;
     color: $color-white;
     @include fsl(12px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(10px, 110%);
+    }
   }
 
   &__user {
@@ -245,5 +283,83 @@
   &__user-link {
     @include fsl(14px, 140%);
     transition: $transition;
+  }
+
+  &__mobile {
+    display: none;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: flex;
+      align-items: center;
+    }
+  }
+  &__mobile-col {
+
+    &:not(:first-child) {
+      margin-left: 20px;
+    }
+  }
+  &__mobile-search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  &__menu {
+    --size: 30px;
+
+    width: var(--size);
+    height: var(--size);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: $color-blue;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  &__burger {
+    position: relative;
+    z-index: 0;
+
+    width: 16px;
+    height: 13px;
+  }
+  &__burger-span {
+
+    &:nth-child(1),
+    &:nth-child(3) {
+      content: '';
+      position: absolute;
+      left: 0;
+      
+      width: 16px;
+      height: 1px;
+      
+      contain: content;
+      background: $color-white;
+      transition: .3s;
+      will-change: transform;
+    }
+
+    &:nth-child(1) {
+      top: 0;
+    }
+    &:nth-child(3) {
+      bottom: 0;
+    }
+
+    &:nth-child(2) {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+
+      width: 16px;
+      height: 1px;
+
+      background: $color-white;
+      transition: .3s;
+    }
   }
 }
