--- a/src/assets/styles/modules/button-show.scss
+++ b/src/assets/styles/modules/button-show.scss
@@ -6,5 +6,8 @@
 
   &__text {
     margin-right: 9px;
+    @media (max-width: ($breakpoint - 1px)) {
+      // @include fsl(14px, 140%);
+    }
   }
 }
