--- a/src/assets/styles/modules/section.scss
+++ b/src/assets/styles/modules/section.scss
@@ -1,7 +1,7 @@
 .section {
   margin-top: 80px;
   @media (max-width: ($breakpoint - 1px)) {
-    
+    margin-top: 32px;
   }
 
   &--first {
@@ -14,7 +14,7 @@
   &--last {
     margin-bottom: 100px;
     @media (max-width: ($breakpoint - 1px)) {
-      
+      margin-bottom: 60px;
     }
   }
 
@@ -44,11 +44,17 @@
 
   &__block {
     margin-top: 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-top: 32px;
+    }
   }
 
   &__row {
     display: flex;
     justify-content: space-between;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
   }
 
   &__col {
@@ -56,15 +62,26 @@
 
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        width: 100%;
+      }
     }
     &:nth-child(2) {
       width: calc(#{$col-part-d} * 9 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 20px;
+        width: 100%;
+      }
     }
   }
 
   &__button {
     margin-top: 48px;
     padding: 14px 0;
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-top: 24px;
+      padding: 6px 0;
+    }
 
     display: flex;
     justify-content: center;
