--- a/src/assets/styles/pages/instruments-page.scss
+++ b/src/assets/styles/pages/instruments-page.scss
@@ -53,10 +53,19 @@
   }
 
   &__grid {
+    --itemsCount: 4;
+    // @media (max-width: ($breakpoint - 1px)) {
+    //   --itemsCount: 2;
+    // }
+
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(var(--itemsCount), 1fr);
     column-gap: 20px;
     row-gap: 40px;
+    // @media (max-width: ($breakpoint - 1px)) {
+    //   column-gap: 8px;
+    //   row-gap: 8px;
+    // }
   }
 
   &__card {
@@ -110,9 +119,16 @@
   }
 
   &__container {
+    --itemsCount: 3;
+    --gap: 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      --itemsCount: 2;
+      --gap: 8px;
+    }
+
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 20px;
-    row-gap: 20px;
+    grid-template-columns: repeat(var(--itemsCount), 1fr);
+    column-gap: var(--gap);
+    row-gap: var(--gap);
   }
 }
