--- a/src/assets/styles/helpers/utils.scss
+++ b/src/assets/styles/helpers/utils.scss
@@ -25,6 +25,10 @@
 
   &--2 {
     --itemsCount: 2;
+    @media (max-width: ($breakpoint - 1px)) {
+      --itemsCount: 1;
+      // --gap: 8px;
+    }
   }
 }
 
