--- a/src/views/pages/equip.pug
+++ b/src/views/pages/equip.pug
@@ -18,6 +18,8 @@ block content
                   .equip-page__card-col
                     .equip-page__card-image 
                       img(src="assets/images/equip-1.jpg", alt="")
+                    .arrow-icon
+                      +big-arrow-svg.arrow-icon__svg
                   .equip-page__card-col
                     .equip-page__card-container
                       .equip-page__card-title 
