--- a/src/assets/styles/modules/docs-card.scss
+++ b/src/assets/styles/modules/docs-card.scss
@@ -2,9 +2,13 @@
   display: block;
   background: $color-white;
   border-radius: 4px;
+  border: 1px solid $color-light-gray;
 
   &__container {
     padding: 20px;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 12px;
+    }
   }
 
   &__row {
