--- a/src/assets/styles/pages/equip-page.scss
+++ b/src/assets/styles/pages/equip-page.scss
@@ -13,6 +13,9 @@
 
     &:not(:first-child) {
       margin-top: 20px;
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 32px;
+      }
     }
   }
   
@@ -22,45 +25,96 @@
     background: $color-white;
     border-radius: 4px;
     overflow: hidden;
+    @media (max-width: ($breakpoint - 1px)) {
+      background: transparent;
+    }
   }
   &__card-row {
     display: flex;
+    @media (max-width: ($breakpoint - 1px)) {
+      display: block;
+    }
     justify-content: space-between;
   }
   &__card-col {
     flex-shrink: 0;
     width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 100%;
+    }
+
+    &:nth-child(1) {
+      @media (max-width: ($breakpoint - 1px)) {
+        position: relative;
+        z-index: 0;
+      }
+      .arrow-icon {
+        @media (min-width: $breakpoint) {
+          display: none;
+        }
+      }
+    }
 
     &:nth-child(2) {
       position: relative;
       z-index: 0;
+
+      .arrow-icon {
+        @media (max-width: ($breakpoint - 1px)) {
+          display: none;
+        }
+      }
     }
   }
   &__card-image {
     display: flex;
     align-items: center;
+
+    @media (max-width: ($breakpoint - 1px)) {
+      border-radius: 4px;
+      overflow: hidden;
+    }
   }
   &__card-container {
     padding: 48px calc(#{$col-part-d} * 2) 48px 0;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 15px 0 0;
+    }
   }
   &__card-title {
     margin-bottom: 24px;
     @include fsl(24px, 120%);
+    @media (max-width: ($breakpoint - 1px)) {
+      margin-bottom: 12px;
+      @include fsl(16px, 120%);
+    }
     font-weight: 500;
   }
   &__card-item {
-    @include fsl(16px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(12px, 120%);
+    }
     color: $color-gray;
     &:not(:first-child) {
       margin-top: 12px;
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-top: 8px;
+      }
     }
   }
 
   &__grid {
+    --gap: 20px;
+    --countItems: 3;
+    @media (max-width: ($breakpoint - 1px)) {
+      --gap: 32px;
+      --countItems: 1;
+    }
+
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 20px;
-    column-gap: 20px;
+    grid-template-columns: repeat(var(--countItems), 1fr);
+    row-gap: var(--gap);
+    column-gap: var(--gap);
 
     &--alt {
       grid-template-columns: repeat(4, 1fr);
